# m4b-extractor

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-release.yml  create-release.yml  run-tests.yml
src/: args.rs  commands.rs  main.rs  utils.rs
tests/: test.rs
