[package]
name = "m4b-extractor"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "CLI tool to extract chapters, metadata and cover for M4B Audiobook."
homepage = "https://github.com/ewilan-riviere/m4b-extractor"
repository = "https://github.com/ewilan-riviere/m4b-extractor"
readme = "README.md"
keywords = ["filesystem"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rayon = "1.6"
anyhow = "1.0"
regex = "1.7"
which = "4.4"
