[package]
name = "m4b-extractor"
authors = ["Lily Vex", "Ewilan Rivière"]
version = "0.0.5"
edition = "2024"
license = "MIT"
description = "CLI tool to extract chapters, metadata and cover for M4B Audiobook."
homepage = "https://github.com/lilyvex/m4b-extractor"
repository = "https://github.com/lilyvex/m4b-extractor"
readme = "README.md"
keywords = ["m4b", "converter", "audiobook", "cli-tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
rayon = "1.12.0"
anyhow = "1.0.102"
regex = "1.12.3"
which = "8.0.2"
